# duet

duet/: abstractInt.ml  dune  test_libnormaliz.ml  test_polyhedron.ml
srk/src/: abstractInt.ml  abstractInt.mli  bigtop.ml  dune  linear.ml  linear.mli  polyhedron.ml  polyhedron.mli
srk/test/: dune  test_libnormaliz.ml  test_polyhedron.ml  test_srk.ml
