(library
  (public_name srk)
  (modules (:standard \ bigtop))
  (modes native)
  (libraries
    batteries
    ppx_deriving ppx_deriving.show ppx_deriving.ord ppx_deriving.eq
    gmp
    camlidl
    apron apron.boxMPQ apron.octMPQ apron.polkaMPQ
    z3
    OCRS
    ntl
    ocamlgraph
    libnormaliz)
  (preprocess (pps ppx_deriving.ord ppx_deriving.eq ppx_deriving.show)))

(executable
  (name bigtop)
  (modules bigtop)
  (modes native)
  (promote (until-clean) (into ..))
  (libraries srk oUnit apron apron.boxMPQ apron.octMPQ apron.polkaMPQ libnormaliz)
  (preprocess (pps ppx_deriving.ord ppx_deriving.eq ppx_deriving.show))
  (link_flags -cclib /home/adithya/Downloads/ocaml-libnormaliz-modern/Normaliz/local/lib/libnormaliz.a -cclib -lstdc++ -cclib -lgmp -cclib -lgmpxx )
)

(ocamllex
  (modules srkLex))

(menhir
  (modules srkParse))